--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "axios": "^0.27.2",
+    "chakra-react-select": "^4.1.4",
     "framer-motion": "^6.5.1",
     "next": "^12.2.3",
     "next-auth": "^4.10.3",
